--- a/landingpage/templates/landingpage/index.html
+++ b/landingpage/templates/landingpage/index.html
@@ -6,6 +6,7 @@
     </head>
 
     <body>
-        <h1>Hello from template!</h1>
+        <h1>{{ title }}</h1>
+        <p>{{ message }}</p>
     </body>
 </html>
