--- a/landingpage/templates/landingpage/blog.html
+++ b/landingpage/templates/landingpage/blog.html
@@ -27,29 +27,15 @@
       crossorigin="anonymous"
     />
 
-    <style>
-      .bd-placeholder-img {
-        font-size: 1.125rem;
-        text-anchor: middle;
-        -webkit-user-select: none;
-        -moz-user-select: none;
-        -ms-user-select: none;
-        user-select: none;
-      }
+    <!-- Custom styles for this template -->
+    {% load static %}
+    <link href='{% static "/css/blog.css" %}' rel="stylesheet" />
 
-      @media (min-width: 768px) {
-        .bd-placeholder-img-lg {
-          font-size: 3.5rem;
-        }
-      }
-    </style>
     <!-- Custom styles for this template -->
     <link
       href="https://fonts.googleapis.com/css?family=Playfair+Display:700,900"
       rel="stylesheet"
     />
-    <!-- Custom styles for this template -->
-    <link href="blog.css" rel="stylesheet" />
   </head>
   <body>
     <div class="container">
@@ -106,13 +92,9 @@
 
       <div class="jumbotron p-4 p-md-5 text-white rounded bg-dark">
         <div class="col-md-6 px-0">
-          <h1 class="display-4 font-italic">
-            Title of a longer featured blog post
-          </h1>
+          <h1 class="display-4 font-italic">{{ landingpage.title }}</h1>
           <p class="lead my-3">
-            Multiple lines of text that form the lede, informing new readers
-            quickly and efficiently about what’s most interesting in this post’s
-            contents.
+            {{ landingpage.message }}
           </p>
           <p class="lead mb-0">
             <a href="#" class="text-white font-weight-bold"
