create block to highlights

--- a/landingpage/templates/landingpage/partials/content/_landingpage_content.html
+++ b/landingpage/templates/landingpage/partials/content/_landingpage_content.html
@@ -3,8 +3,8 @@
     {% include "landingpage/partials/content/_banner_big.html" %}
   {% endblock %}
 
-  {% block highligths %}
-    {% include "landingpage/partials/content/_highligths.html" %}
+  {% block highlights %}
+    {% include "landingpage/partials/content/_section_highlights.html" %}
   {% endblock %}
 </div>
 
