create absolut url by article and update landingpage template with real article data

--- a/landingpage/templates/landingpage/partials/content/highlights/_section_highlights.html
+++ b/landingpage/templates/landingpage/partials/content/highlights/_section_highlights.html
@@ -1,6 +1,6 @@
 <div class="row mb-2">
   {% for card in landingpage.cards %}
-    {% block highlights_card_1 %}
+    {% block highlights_card %}
       {% include "landingpage/partials/content/highlights/_highlights_card.html" %}
     {% endblock %}
   {% endfor %}
