--- a/landingpage/templates/landingpage/partials/content/_banner_big.html
+++ b/landingpage/templates/landingpage/partials/content/_banner_big.html
@@ -1,9 +1,9 @@
 <div class="jumbotron p-4 p-md-5 text-white rounded bg-dark">
   <div class="col-md-6 px-0">
-    <h1 class="display-4 font-italic">{{ landingpage.title }}</h1>
-    <p class="lead my-3">{{ landingpage.message }}</p>
+    <h1 class="display-4 font-italic">{{ banner.title }}</h1>
+    <p class="lead my-3">{{ banner.content | truncatewords_html:16 }}</p>
     <p class="lead mb-0">
-      <a href="#" class="text-white font-weight-bold">Continue reading...</a>
+      <a href="{{ banner.get_absolute_url }}" class="text-white font-weight-bold">Continue reading...</a>
     </p>
   </div>
 </div>
