--- a/landingpage/templates/landingpage/partials/content/_section_articles.html
+++ b/landingpage/templates/landingpage/partials/content/_section_articles.html
@@ -1,27 +1,21 @@
 <div class="col-md-8 blog-main">
-  <h3 class="pb-4 mb-4 font-italic border-bottom">From the Firehose</h3>
+  <h3 class="pb-4 mb-4 font-italic border-bottom">Other Articles</h3>
 
-  {% for article in article_list %}
+  {% for article in page_obj %}
   <div class="blog-post">
     <h2 class="blog-post-title">{{ article.title }}</h2>
-    <p class="blog-post-meta">{{ article.published | date:"F d, Y" }} by <a href="#">{{ article.author }}</a></p>
-
-    <p>
-      {{ article.content }}
+    <p class="blog-post-meta">
+      {{ article.published | date:"F d, Y" }} by
+      <a href="#">{{ article.author }}</a>
     </p>
+
+    <p>{{ article.content }}</p>
   </div>
   <!-- /.blog-post -->
   {% endfor %}
 
-  <nav class="blog-pagination">
-    <a class="btn btn-outline-primary" href="#">Older</a>
-    <a
-      class="btn btn-outline-secondary disabled"
-      href="#"
-      tabindex="-1"
-      aria-disabled="true"
-      >Newer</a
-    >
-  </nav>
+  {% block pagination %}
+    {% include "landingpage/partials/_paginations.html" with page=page_obj %}
+  {% endblock %}
 </div>
 <!-- /.blog-main -->
