use paginator in listview

--- a/landingpage/templates/landingpage/partials/header/_header_nav.html
+++ b/landingpage/templates/landingpage/partials/header/_header_nav.html
@@ -1,16 +1,16 @@
 <div class="nav-scroller py-1 mb-2">
   <nav class="nav d-flex justify-content-between">
-    <a class="p-2 text-muted" href="#">World</a>
-    <a class="p-2 text-muted" href="#">U.S.</a>
-    <a class="p-2 text-muted" href="#">Technology</a>
-    <a class="p-2 text-muted" href="#">Design</a>
-    <a class="p-2 text-muted" href="#">Culture</a>
-    <a class="p-2 text-muted" href="#">Business</a>
-    <a class="p-2 text-muted" href="#">Politics</a>
-    <a class="p-2 text-muted" href="#">Opinion</a>
-    <a class="p-2 text-muted" href="#">Science</a>
-    <a class="p-2 text-muted" href="#">Health</a>
-    <a class="p-2 text-muted" href="#">Style</a>
-    <a class="p-2 text-muted" href="#">Travel</a>
+    <a class="p-2 text-muted" href="{% url 'articles:article-list' %}">World</a>
+    <a class="p-2 text-muted" href="{% url 'articles:article-list' %}">U.S.</a>
+    <a class="p-2 text-muted" href="{% url 'articles:article-list' %}">Technology</a>
+    <a class="p-2 text-muted" href="{% url 'articles:article-list' %}">Design</a>
+    <a class="p-2 text-muted" href="{% url 'articles:article-list' %}">Culture</a>
+    <a class="p-2 text-muted" href="{% url 'articles:article-list' %}">Business</a>
+    <a class="p-2 text-muted" href="{% url 'articles:article-list' %}">Politics</a>
+    <a class="p-2 text-muted" href="{% url 'articles:article-list' %}">Opinion</a>
+    <a class="p-2 text-muted" href="{% url 'articles:article-list' %}">Science</a>
+    <a class="p-2 text-muted" href="{% url 'articles:article-list' %}">Health</a>
+    <a class="p-2 text-muted" href="{% url 'articles:article-list' %}">Style</a>
+    <a class="p-2 text-muted" href="{% url 'articles:article-list' %}">Travel</a>
   </nav>
 </div>
