--- a/articles/templates/articles/article_list.html
+++ b/articles/templates/articles/article_list.html
@@ -1,11 +1,5 @@
-<h1>Articles</h1>
-<ul>
-    {% for article in object_list %}
-        <li><a href="http://localhost:8000/articles/{{ article.slug }}" style="
-            color: black;
-            text-decoration: none;
-        "> {{ article.published| date }} - {{ article.title }}</a></li>
-        {% empty %}
-        <li>No articles yet.</li>
-    {% endfor %}
-</ul>
+{% extends "landingpage/base.html" %}
+
+{% block page_content %}
+    {% include "articles/partials/_article_list.html" %}
+{% endblock %}
