--- a/landingpage/templates/landingpage/partials/header/_header_nav.html
+++ b/landingpage/templates/landingpage/partials/header/_header_nav.html
@@ -1,16 +1,7 @@
 <div class="nav-scroller py-1 mb-2">
   <nav class="nav d-flex justify-content-between">
-    <a class="p-2 text-muted" href="{% url 'articles:article-list' %}">World</a>
-    <a class="p-2 text-muted" href="{% url 'articles:article-list' %}">U.S.</a>
-    <a class="p-2 text-muted" href="{% url 'articles:article-list' %}">Technology</a>
-    <a class="p-2 text-muted" href="{% url 'articles:article-list' %}">Design</a>
-    <a class="p-2 text-muted" href="{% url 'articles:article-list' %}">Culture</a>
-    <a class="p-2 text-muted" href="{% url 'articles:article-list' %}">Business</a>
-    <a class="p-2 text-muted" href="{% url 'articles:article-list' %}">Politics</a>
-    <a class="p-2 text-muted" href="{% url 'articles:article-list' %}">Opinion</a>
-    <a class="p-2 text-muted" href="{% url 'articles:article-list' %}">Science</a>
-    <a class="p-2 text-muted" href="{% url 'articles:article-list' %}">Health</a>
-    <a class="p-2 text-muted" href="{% url 'articles:article-list' %}">Style</a>
-    <a class="p-2 text-muted" href="{% url 'articles:article-list' %}">Travel</a>
+    {% for category_tag, category_name in categories %}
+      <a class="p-2 text-muted" href="{% url 'articles:article-list' category_tag %}">{{ category_name }}</a>
+    {% endfor %}
   </nav>
 </div>
